--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,3 +28,7 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+<script type="text/javascript" src="/js/gifffer.min.js"></script>
+<script>window.onload = function() { Gifffer(); }</script>
+<script type="text/javascript" src="/js/copy-code-button.js"></script>
